[metadata]
description_file = README.md

# -- Code quality ------------------------------------
[flake8]
count = True
exclude =
    .git
max-complexity = 20
max-doc-length = 130
max-line-length = 80
ignore = T201, W503, W504
per-file-ignores =
    winmol_analyzer.py:F401, E501, F403, W505
per-file-line_length = 21

[isort]
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
line_length = 80
multi_line_output = 3
profile = black
use_parentheses = True
