[metadata]
description_file = README.md

# -- Code quality ------------------------------------
[flake8]
count = True
exclude =
    .git
ignore = T201, W503, W504
max-complexity = 20
max-doc-length = 130
max-line-length = 80
per-file-ignores =
    __init__.py: E501, W505
    plugin_upload.py: E501, W505, F821
    resources.py: E501, W505
    winmol_analyzer.py: F401, E501, F403, W505
    winmol_analyzer_dialog.py: E501, W505
per-file-line_length = 21

[isort]
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
line_length = 80
multi_line_output = 3
profile = black
use_parentheses = True
